Add and modify files

--- a/10-Database/Cloud Run Test v3 (site dev v4).ipynb
+++ b/10-Database/Cloud Run Test v3 (site dev v4).ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "657aa36a-3efa-4883-ad0f-c484e2ffb746",
    "metadata": {},
    "outputs": [],
@@ -38,36 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "770a22e2-0f46-4c04-8112-e6b96d370acd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyter/tech-stack/10-Database/cloud-run-test-v3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cd cloud-run-test-v3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ab7a43b0-ed20-4882-9dc3-83a292742c9e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing env.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile env.py\n",
     "# DB Credentials\n",
@@ -80,18 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fd0ceb2d-eed7-4f1b-b707-2c13f57c6abf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing app.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -368,18 +344,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8ef7e79e-ec16-4667-85b1-36bb83ad1291",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing Dockerfile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -388,6 +356,16 @@
     "COPY . /app\n",
     "EXPOSE 9000\n",
     "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\", \"--server.port\", \"9000\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "937539d9-7bed-4c29-8064-d86c396e6f56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd cloud-run-test-v3"
    ]
   },
   {
