Add and modify files

--- a/site-/site dev.ipynb
+++ b/site-/site dev.ipynb
@@ -13,7 +13,10 @@
   {
    "cell_type": "markdown",
    "id": "2ff68659-7e98-42c7-9a9b-b910789d014c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Application"
    ]
@@ -39,11 +42,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dea58bf-4b55-4bd1-83fe-e27035a686fe",
+   "cell_type": "raw",
+   "id": "2f067139-114d-44e6-abe8-3d52116b1cb2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%writefile env.py\n",
     "# DB Credentials\n",
@@ -55,11 +56,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a15ab057-15b5-4fae-8cd3-49459e3d853a",
+   "cell_type": "raw",
+   "id": "365df53b-f759-4937-ba09-477a25577534",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -332,11 +331,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6faa18c7-7d45-456e-8ef1-23cb0fe0e3e8",
+   "cell_type": "raw",
+   "id": "90be4a0a-7f68-4764-af30-3091ca497550",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -431,7 +428,10 @@
   {
    "cell_type": "markdown",
    "id": "4bed33b5-720f-41ac-a2c5-cb8aa3ed2606",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Deployment"
    ]
