Add and modify files

--- a/site-/site dev.ipynb
+++ b/site-/site dev.ipynb
@@ -12,8 +12,209 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dffed7bd-99cf-4d37-85ba-d62d1c170c03",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05b9c99c-2e5d-4bbf-81f2-ee4bee0e3ff7",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Create a database server using Docker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5501b9d9-edd7-4c49-a60b-94ddb8be2526",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "#### Postgres Docker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ba62984-c0a2-49af-a29f-127cefc90f6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Without volume/data connected\n",
+    "# !docker run --name postgres-sql -e POSTGRES_USER=matt -e POSTGRES_PASSWORD=password  -d postgres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce07382b-6eb6-4de6-b34c-67e3d3d6f0ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# With volume/data connected\n",
+    "!docker run -d \\\n",
+    "    --name postgres-sql \\\n",
+    "    -e POSTGRES_USER=matt \\\n",
+    "    -e POSTGRES_PASSWORD=password \\\n",
+    "    -v $(pwd)/data/:/var/lib/postgresql/data/ \\\n",
+    "    -p 5000:5432 \\\n",
+    "    postgres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e804e316-d06d-4468-bebc-82df92563b74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e21f2874-b6c0-41e0-8751-fbf3f2dd113d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19f3d400-4dd8-4342-9582-e8cb725ab2d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the data\n",
+    "# In a terminal\n",
+    "# sudo su\n",
+    "# cd $(pwd)/data/\n",
+    "# ls -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf2936ee-6924-4cf9-8760-c1ebe6e0d67c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test the data of the DB\n",
+    "# docker rm -f <CONTAINER_ID>\n",
+    "# run the docker run <...>\n",
+    "# check the pgAdmin\n",
+    "# the data persists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b9c789c-08fe-4dce-a30f-82898b81c4bd",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "#### pgAdmin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04620fde-561c-478b-a0b4-1549368d89a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker run -p 8000:80 \\\n",
+    "    -e 'PGADMIN_DEFAULT_EMAIL=matt@example.com' \\\n",
+    "    -e 'PGADMIN_DEFAULT_PASSWORD=password' \\\n",
+    "    -d dpage/pgadmin4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f10896ff-79b5-450f-81db-db77a548b515",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04d9ba33-1594-47c8-b244-4915fbe1899e",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "#### Create a firewall (GCP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2641bcb1-fb7c-4f45-a664-f1d95bea3923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud compute --project=$(gcloud config get project) firewall-rules create ports \\\n",
+    "    --direction=INGRESS --priority=1000 --network=default --action=ALLOW --rules=tcp:5000,tcp:8000,tcp:8501,tcp:9000 --source-ranges=0.0.0.0/0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "def0e4b7-3391-415c-a389-a99a8cdddca7",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "#### Open pgAdmin Browser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ebb9d55-3f38-470a-ae2f-45d58aed7066",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# http://<IP_ADDRESS>:<PORT>\n",
+    "# Login with credentials\n",
+    "\n",
+    "# Register Server\n",
+    "# HOST: <IP_ADDRESS>\n",
+    "# PORT: 5000\n",
+    "# USER: <POSTGRES_USER>\n",
+    "# PASSWORD: <PASSWORD>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86447d9f-ddb7-4b8f-934c-8612f14c9e8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "2ff68659-7e98-42c7-9a9b-b910789d014c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -57,11 +258,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53b40230-4025-4452-aeb9-ec296ec5654c",
+   "cell_type": "raw",
+   "id": "5abab5a1-deb9-489c-a45c-cc8f53361585",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -334,11 +533,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8811b67d-db21-46cb-a72f-1f14221285c1",
+   "cell_type": "raw",
+   "id": "0c84f31e-ae7b-4112-8181-1ed53c007c9b",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -434,6 +631,7 @@
    "cell_type": "markdown",
    "id": "4bed33b5-720f-41ac-a2c5-cb8aa3ed2606",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
