Add and modify files

--- a/10-Database/Cloud Run Test Env.ipynb
+++ b/10-Database/Cloud Run Test Env.ipynb
@@ -11,9 +11,12 @@
   {
    "cell_type": "markdown",
    "id": "059fff4f-66ba-404c-b6f7-27ddaacfd8d7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "# Cloud Run Test"
+    "# Cloud Run Test Env Simple App"
    ]
   },
   {
@@ -246,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd cloud-run-test"
+    "cd cloud-run-test-env"
    ]
   },
   {
@@ -270,90 +273,6 @@
    "source": [
     "# It's working."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "41c931da-26bc-4b97-9518-2cca167291bf",
-   "metadata": {},
-   "source": [
-    "#### Pull the image from Artifact Registry"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3ee80f7-643b-4934-8bb2-a4f9bec7ed10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !gcloud auth configure-docker us-west2-docker.pkg.dev"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f61e9bf-ebbe-4207-975e-57133cd2de59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!docker pull us-west2-docker.pkg.dev/$(gcloud config get-value project)/app-v2/app:tag1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a2850c2-fdc3-4c87-b5d6-c83d737c998a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!docker images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea0a2869-d00a-4c98-b338-025f84dd6e3e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!docker run -d -p 8501:8501 -v $(pwd):/app us-west2-docker.pkg.dev/$(gcloud config get-value project)/app-v2/app:tag1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94ac8623-b22b-41c4-b047-b6f465575493",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!docker ps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "530e0293-1171-4ab9-b6a6-5dae0ce56929",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !docker rm -f <...>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21e2c639-8661-471d-a3c2-b1a3884a40d3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d4de7aa-2b5e-48e4-9561-cc17e415d266",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
