Add and modify files

--- a/10-Database/Cloud Run Test Env.ipynb
+++ b/10-Database/Cloud Run Test Env.ipynb
@@ -296,7 +296,7 @@
     "## Site App Dev\n",
     "\n",
     "* For development\n",
-    "* Cloud Run Deployment and usinf environment variables \n",
+    "* Cloud Run Deployment and using environment variables \n",
     "* Environment Variables using os.getenv and os.environ.get"
    ]
   },
