Add and modify files

--- a/site-/site dev.ipynb
+++ b/site-/site dev.ipynb
@@ -758,7 +758,7 @@
     "\n",
     "* For development\n",
     "* Cloud Run Deployment and using environment variables \n",
-    "* Environment Variables using os.getenv and os.environ.get"
+    "* Environment Variables using os.getenv / os.environ.get"
    ]
   },
   {
@@ -779,7 +779,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir cloud-run-test-env"
+    "!mkdir site-app-dev-env"
    ]
   },
   {
@@ -789,7 +789,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd cloud-run-test-env"
+    "cd site-app-dev-env"
    ]
   },
   {
@@ -999,7 +999,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir cloud-run-test-env"
+    "!mkdir site-app-dev-env"
    ]
   },
   {
@@ -1009,7 +1009,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd cloud-run-test-env"
+    "cd site-app-dev-env"
    ]
   },
   {
@@ -1028,10 +1028,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a8572294-7625-4009-b63e-5f0143108962",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing app.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -1312,10 +1320,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a2d506da-31c4-4dcd-9a53-bc285c47eeac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing Dockerfile\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
