Add and modify files

--- a/site-/site dev.ipynb
+++ b/site-/site dev.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "id": "f0f91593-e3e4-49e5-ad52-43b38f0f7f05",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Site App Dev\n",
     "\n",
@@ -14,6 +17,7 @@
    "cell_type": "markdown",
    "id": "78ca4d0a-2b4b-4a01-90d8-3b119ef742d3",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -188,7 +192,6 @@
    "cell_type": "markdown",
    "id": "def0e4b7-3391-415c-a389-a99a8cdddca7",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -213,22 +216,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86447d9f-ddb7-4b8f-934c-8612f14c9e8b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "2ff68659-7e98-42c7-9a9b-b910789d014c",
+   "id": "802e5ac0-0673-4620-955b-d0e61a55de96",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "## Application"
+    "## Directory"
    ]
   },
   {
@@ -249,6 +244,17 @@
    "outputs": [],
    "source": [
     "cd site-app-dev"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ff68659-7e98-42c7-9a9b-b910789d014c",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Application"
    ]
   },
   {
@@ -641,7 +647,6 @@
    "cell_type": "markdown",
    "id": "4bed33b5-720f-41ac-a2c5-cb8aa3ed2606",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -652,6 +657,7 @@
    "cell_type": "markdown",
    "id": "a3c7066b-1737-4452-8d75-d597ec538001",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -667,7 +673,7 @@
    "source": [
     "%%sh\n",
     "# Create a Docker repository in Artifact Registry\n",
-    "gcloud artifacts repositories create simple-app \\\n",
+    "gcloud artifacts repositories create app \\\n",
     "    --repository-format=docker \\\n",
     "    --location=us-west2 \\\n",
     "    --description=\"Docker repository\""
@@ -707,11 +713,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc40f875-f7c9-46e5-b0bc-af0933efc7d3",
+   "id": "72113c43-7ccd-419a-ab53-c6cb2c6df02e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd cloud-run-test-v2"
+    "cd site-app-dev"
    ]
   },
   {
@@ -723,13 +729,14 @@
    "source": [
     "!gcloud builds submit \\\n",
     "    --region=us-west2 \\\n",
-    "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/simple-app/simple-app:tag6"
+    "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/app/app:tag1"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "9c08d828-9b1c-4d8c-86ba-5639bf6a1b3b",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
