Add and modify files

--- a/13-App-site-blog/site-app-dev-multi/site dev multi.ipynb
+++ b/13-App-site-blog/site-app-dev-multi/site dev multi.ipynb
@@ -188,7 +188,6 @@
    "cell_type": "markdown",
    "id": "137f5044-f353-4f74-972c-3b1e74aa6622",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -213,22 +212,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "809bb8e2-b01e-4d07-a911-3df6640ed5ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "d2595318-48c9-4234-bd55-aa1cedc8a956",
+   "id": "902aaf4f-f12c-489d-9c9f-1e64194f9ea5",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "## Application"
+    "## Directory"
    ]
   },
   {
@@ -238,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir site-app-dev"
+    "!mkdir site-app-dev-multi"
    ]
   },
   {
@@ -248,7 +239,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd site-app-dev"
+    "cd site-app-dev-multi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2595318-48c9-4234-bd55-aa1cedc8a956",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Application"
    ]
   },
   {
@@ -262,14 +263,14 @@
     "# DB Credentials\n",
     "DBNAME=\"matt\"\n",
     "USER='matt'\n",
-    "HOST= ''\n",
+    "HOST= '34.31.52.138'\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "e3ee2717-e80e-45c9-a96e-c661a5a65337",
+   "id": "1be71811-bdbf-4d3d-a59f-974bcaea2d99",
    "metadata": {},
    "source": [
     "%%writefile app.py\n",
@@ -286,10 +287,10 @@
     "st.set_page_config(page_title=\"Matt Cloud Tech\",\n",
     "                   page_icon=\":cloud:\",\n",
     "                   menu_items={\n",
-    "                       'About':\"# Matt Cloud Tech Version 4\"})\n",
+    "                       'About':\"# Matt Cloud Tech Version\"})\n",
     "\n",
     "#----------About Me Section----------#\n",
-    "st.title(\":cloud: Matt Cloud Tech v4\")\n",
+    "st.title(\":cloud: Matt Cloud Tech\")\n",
     "st.header(\"\", divider=\"rainbow\")\n",
     "\n",
     "st.write(\"\"\"\n",
@@ -543,9 +544,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "527582a1-0ec0-4707-8592-6ea55b8604e0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "512ac564-d7f3-45f7-978f-20bd7de34056",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -1028,18 +1031,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e558997a-4ed9-4dc2-a0b7-90999b20bb51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing app.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -1320,18 +1315,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b1535488-c496-4a56-b8a7-5441cabb54cb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing Dockerfile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
