--- a/12-App/site.mattcloudtech/site dev.ipynb
+++ b/12-App/site.mattcloudtech/site dev.ipynb
@@ -8,9 +8,11 @@
     "tags": []
    },
    "source": [
-    "# Site App Dev\n",
+    "# Site App Dev (site.mattcloudtech)\n",
     "\n",
-    "For development"
+    "For development\n",
+    "\n",
+    "Edited from Notebook from site-/site dev.ipynb"
    ]
   },
   {
@@ -49,7 +51,6 @@
    "cell_type": "markdown",
    "id": "5501b9d9-edd7-4c49-a60b-94ddb8be2526",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -136,7 +137,6 @@
    "cell_type": "markdown",
    "id": "7b9c789c-08fe-4dce-a30f-82898b81c4bd",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -170,7 +170,6 @@
    "cell_type": "markdown",
    "id": "04d9ba33-1594-47c8-b244-4915fbe1899e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -274,9 +273,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "5abab5a1-deb9-489c-a45c-cc8f53361585",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4143b58e-9c64-4ce6-a6b4-2075a3938bc1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -549,9 +552,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "0c84f31e-ae7b-4112-8181-1ed53c007c9b",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfe05076-d904-4343-a299-a8a3fb92ccb7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -647,6 +654,7 @@
    "cell_type": "markdown",
    "id": "4bed33b5-720f-41ac-a2c5-cb8aa3ed2606",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1035,18 +1043,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a8572294-7625-4009-b63e-5f0143108962",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing app.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -1327,18 +1327,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a2d506da-31c4-4dcd-9a53-bc285c47eeac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing Dockerfile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -1563,7 +1555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
