Add and modify files

--- a/12-App/site.mattcloudtech/site dev.ipynb
+++ b/12-App/site.mattcloudtech/site dev.ipynb
@@ -19,7 +19,6 @@
    "cell_type": "markdown",
    "id": "78ca4d0a-2b4b-4a01-90d8-3b119ef742d3",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -41,6 +40,7 @@
    "cell_type": "markdown",
    "id": "05b9c99c-2e5d-4bbf-81f2-ee4bee0e3ff7",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -249,7 +249,6 @@
    "cell_type": "markdown",
    "id": "2ff68659-7e98-42c7-9a9b-b910789d014c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -273,13 +272,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4143b58e-9c64-4ce6-a6b4-2075a3938bc1",
+   "cell_type": "raw",
+   "id": "52d8c8fa-777d-448c-80b3-8752b872118a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -572,9 +569,11 @@
   {
    "cell_type": "markdown",
    "id": "5c481886-2d03-4d30-be4e-d225d403fc7e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### Build an image locally"
+    "## Build an image locally"
    ]
   },
   {
@@ -585,6 +584,16 @@
    "outputs": [],
    "source": [
     "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c7883d1-190b-4607-ad72-07fc47109c2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd site"
    ]
   },
   {
@@ -702,7 +711,10 @@
   {
    "cell_type": "markdown",
    "id": "df898955-e45f-4516-9c27-b57396063d1e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Build an image using Dockerfile"
    ]
